// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Result demos > demo: Basic 1`] = `
"<div class="ant-result ant-result-success" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"></path>
    </svg></div>
  <div class="ant-result-title">Successfully Purchased Cloud Server ECS!</div>
  <div class="ant-result-subtitle">Order number: 2017182818828182881 Cloud server configuration takes 1-5 minutes, please wait.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Buy Again</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: CustomIcon 1`] = `
"<div class="ant-result ant-result-info" role="status">
  <div class="ant-result-icon" aria-hidden="true"><span role="img" aria-label="smile" class="anticon anticon-smile"><svg focusable="false" class="" data-icon="smile" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z" fill="#1890ff"></path><path d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zM288 421a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm224 272c-85.5 0-155.6-67.3-160-151.6a8 8 0 018-8.4h48.1c4.2 0 7.8 3.2 8.1 7.4C420 589.9 461.5 629 512 629s92.1-39.1 95.8-88.6c.3-4.2 3.9-7.4 8.1-7.4H664a8 8 0 018 8.4C667.6 625.7 597.5 693 512 693zm176-224a48.01 48.01 0 010-96 48.01 48.01 0 010 96z" fill="#e6f7ff"></path><path d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm376 112h-48.1c-4.2 0-7.8 3.2-8.1 7.4-3.7 49.5-45.3 88.6-95.8 88.6s-92-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4zm-24-112a48 48 0 1096 0 48 48 0 10-96 0z" fill="#1890ff"></path></svg></span></div>
  <div class="ant-result-title">Great, we have done all the operations!</div>
  <!--v-if-->
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Next</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: Error 1`] = `
"<div data-v-0a752da5="" class="ant-result ant-result-error" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"></path>
    </svg></div>
  <div class="ant-result-title">Submission Failed</div>
  <div class="ant-result-subtitle">Please check and modify the following information before resubmitting.</div>
  <div class="ant-result-extra"><button data-v-0a752da5="" class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button><button data-v-0a752da5="" class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Buy Again</span>
    </button></div>
  <div class="ant-result-content">
    <div data-v-0a752da5="" class="desc">
      <p data-v-0a752da5="" style="font-size: 16px;"><strong data-v-0a752da5="">The content you submitted has the following error:</strong></p>
      <p data-v-0a752da5=""><span data-v-0a752da5="" role="img" aria-label="close-circle" style="color: red;" class="anticon anticon-close-circle"><svg focusable="false" class="" data-icon="close-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" fill-rule="evenodd" viewBox="64 64 896 896"><path d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"></path></svg></span> Your account has been frozen <a data-v-0a752da5="">Thaw immediately &gt;</a></p>
      <p data-v-0a752da5=""><span data-v-0a752da5="" role="img" aria-label="close-circle" style="color: red;" class="anticon anticon-close-circle"><svg focusable="false" class="" data-icon="close-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" fill-rule="evenodd" viewBox="64 64 896 896"><path d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"></path></svg></span> Your account is not yet eligible to apply <a data-v-0a752da5="">Apply Unlock &gt;</a></p>
    </div>
  </div>
</div>"
`;

exports[`Result demos > demo: Forbidden 1`] = `
"<div class="ant-result ant-result-403" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="0 0 251 294" width="250" height="294">
      <!-- 403 Unauthorized illustration -->
      <g fill="none" fill-rule="evenodd">
        <!-- Lock body -->
        <rect x="50" y="120" width="150" height="130" rx="12" fill="#E6E6E6" stroke="#D9D9D9" stroke-width="2"></rect><!-- Lock shackle -->
        <path d="M80 120V80a45 45 0 0190 0v40" stroke="#D9D9D9" stroke-width="8" fill="none" stroke-linecap="round"></path><!-- Keyhole circle -->
        <circle cx="125" cy="170" r="18" fill="#BFBFBF"></circle><!-- Keyhole slot -->
        <rect x="120" y="182" width="10" height="30" rx="5" fill="#BFBFBF"></rect><!-- Shield outline -->
        <path d="M125 10l80 35v60c0 55-35 105-80 130C80 210 45 160 45 105V45z" stroke="#FFCCC7" stroke-width="2" fill="none" opacity="0.5"></path><!-- X mark left -->
        <line x1="170" y1="40" x2="210" y2="80" stroke="#FF4D4F" stroke-width="4" stroke-linecap="round" opacity="0.6"></line><!-- X mark right -->
        <line x1="210" y1="40" x2="170" y2="80" stroke="#FF4D4F" stroke-width="4" stroke-linecap="round" opacity="0.6"></line>
      </g>
    </svg></div>
  <div class="ant-result-title">403</div>
  <div class="ant-result-subtitle">Sorry, you are not authorized to access this page.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Back Home</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: Info 1`] = `
"<div class="ant-result ant-result-info" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"></path>
    </svg></div>
  <div class="ant-result-title">Your operation has been executed</div>
  <!--v-if-->
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: NotFound 1`] = `
"<div class="ant-result ant-result-404" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="0 0 252 294" width="250" height="294">
      <!-- 404 Not Found illustration -->
      <g fill="none" fill-rule="evenodd">
        <!-- Page background -->
        <rect x="30" y="20" width="190" height="240" rx="8" fill="#F5F5F5" stroke="#D9D9D9" stroke-width="2"></rect><!-- Page fold -->
        <path d="M180 20v40h40" fill="#E6E6E6" stroke="#D9D9D9" stroke-width="2"></path><!-- Content lines -->
        <rect x="60" y="80" width="130" height="8" rx="4" fill="#E6E6E6"></rect>
        <rect x="60" y="100" width="100" height="8" rx="4" fill="#E6E6E6"></rect>
        <rect x="60" y="120" width="115" height="8" rx="4" fill="#E6E6E6"></rect><!-- Magnifying glass circle -->
        <circle cx="135" cy="185" r="35" stroke="#D9D9D9" stroke-width="4" fill="none"></circle><!-- Magnifying glass handle -->
        <line x1="160" y1="210" x2="185" y2="235" stroke="#D9D9D9" stroke-width="6" stroke-linecap="round"></line><!-- Question mark in magnifier --><text x="125" y="196" font-family="Arial, sans-serif" font-size="40" font-weight="bold" fill="#BFBFBF" text-anchor="middle">?</text><!-- Decorative dots -->
        <circle cx="45" cy="50" r="4" fill="#1677FF" opacity="0.3"></circle>
        <circle cx="210" cy="270" r="6" fill="#1677FF" opacity="0.2"></circle>
        <circle cx="25" cy="200" r="3" fill="#1677FF" opacity="0.25"></circle>
      </g>
    </svg></div>
  <div class="ant-result-title">404</div>
  <div class="ant-result-subtitle">Sorry, the page you visited does not exist.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Back Home</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: ServerError 1`] = `
"<div class="ant-result ant-result-500" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="0 0 252 294" width="250" height="294">
      <!-- 500 Server Error illustration -->
      <g fill="none" fill-rule="evenodd">
        <!-- Server rack top -->
        <rect x="40" y="30" width="170" height="70" rx="8" fill="#F5F5F5" stroke="#D9D9D9" stroke-width="2"></rect><!-- Server rack bottom -->
        <rect x="40" y="110" width="170" height="70" rx="8" fill="#F5F5F5" stroke="#D9D9D9" stroke-width="2"></rect><!-- Top server LEDs -->
        <circle cx="70" cy="55" r="6" fill="#52C41A"></circle>
        <circle cx="90" cy="55" r="6" fill="#52C41A"></circle>
        <circle cx="110" cy="55" r="6" fill="#D9D9D9"></circle><!-- Top server drive slots -->
        <rect x="60" y="70" width="130" height="8" rx="2" fill="#E6E6E6"></rect>
        <rect x="60" y="82" width="130" height="8" rx="2" fill="#E6E6E6"></rect><!-- Bottom server LEDs - error state -->
        <circle cx="70" cy="135" r="6" fill="#FF4D4F"></circle>
        <circle cx="90" cy="135" r="6" fill="#FF4D4F"></circle>
        <circle cx="110" cy="135" r="6" fill="#D9D9D9"></circle><!-- Bottom server drive slots -->
        <rect x="60" y="150" width="130" height="8" rx="2" fill="#E6E6E6"></rect>
        <rect x="60" y="162" width="130" height="8" rx="2" fill="#E6E6E6"></rect><!-- Warning triangle -->
        <path d="M125 205l45 75H80z" fill="#FFF2E8" stroke="#FF4D4F" stroke-width="2"></path><!-- Exclamation in triangle -->
        <rect x="122" y="225" width="6" height="25" rx="3" fill="#FF4D4F"></rect>
        <circle cx="125" cy="262" r="4" fill="#FF4D4F"></circle><!-- Spark/lightning bolt -->
        <path d="M180 40l-10 25h15l-12 30" stroke="#FAAD14" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"></path><!-- Smoke circles -->
        <circle cx="175" cy="20" r="8" fill="#D9D9D9" opacity="0.4"></circle>
        <circle cx="190" cy="12" r="6" fill="#D9D9D9" opacity="0.3"></circle>
        <circle cx="200" cy="25" r="5" fill="#D9D9D9" opacity="0.2"></circle>
      </g>
    </svg></div>
  <div class="ant-result-title">500</div>
  <div class="ant-result-subtitle">Sorry, the server is wrong.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Back Home</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: Success 1`] = `
"<div class="ant-result ant-result-success" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"></path>
    </svg></div>
  <div class="ant-result-title">Successfully Purchased Cloud Server ECS!</div>
  <div class="ant-result-subtitle">Order number: 2017182818828182881 Cloud server configuration takes 1-5 minutes, please wait.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Buy Again</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: Warning 1`] = `
"<div class="ant-result ant-result-warning" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"></path>
    </svg></div>
  <div class="ant-result-title">There are some problems with your operation.</div>
  <!--v-if-->
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button></div>
  <!--v-if-->
</div>"
`;
